--- a/components/posts/posts-grid.module.css
+++ b/components/posts/posts-grid.module.css
@@ -1,9 +1,18 @@
+/** @format */
+
 .grid {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-  gap: 1.5rem;
-  align-content: center;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+	gap: 1.6rem;
+	align-content: center;
+}
+
+@media (max-width: 568px) {
+	.grid {
+		padding-left: 2%;
+		padding-right: 1%;
+	}
 }
